[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/actions/ActionBlock.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/actions/double.png" type="Texture" id=2]
[ext_resource path="res://assets/resources/sprite_frames/actions/TriangleSpriteFrames.tres" type="SpriteFrames" id=3]
[ext_resource path="res://assets/resources/sprite_frames/actions/AttackSpriteFrames.tres" type="SpriteFrames" id=4]
[ext_resource path="res://assets/resources/sprite_frames/actions/PoofSpriteFrames.tres" type="SpriteFrames" id=5]
[ext_resource path="res://assets/sprites/actions/poof.png" type="Texture" id=6]
[ext_resource path="res://assets/resources/sprite_frames/actions/VineLockSpriteFrames.tres" type="SpriteFrames" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 54 )

[sub_resource type="AtlasTexture" id=2]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 78, 40 )

[sub_resource type="AtlasTexture" id=3]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 78, 0, 78, 40 )

[sub_resource type="AtlasTexture" id=5]
flags = 5
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=6]
flags = 5
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=7]
flags = 5
atlas = ExtResource( 6 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=8]
flags = 5
atlas = ExtResource( 6 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=9]
flags = 5
atlas = ExtResource( 6 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=10]
flags = 5
atlas = ExtResource( 6 )
region = Rect2( 240, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=11]
flags = 5
atlas = ExtResource( 6 )
region = Rect2( 0, 720, 240, 240 )

[sub_resource type="AtlasTexture" id=12]
flags = 5
atlas = ExtResource( 6 )
region = Rect2( 240, 720, 240, 240 )

[sub_resource type="AtlasTexture" id=13]
flags = 5
atlas = ExtResource( 6 )
region = Rect2( 0, 960, 240, 240 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "boil",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "poof",
"speed": 12.0
} ]

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TopSprites/EffectSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TopSprites/EffectSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "effect"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TopSprites/EffectSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TopSprites/EffectSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="ActionBlock" type="Node2D"]
script = ExtResource( 1 )

[node name="TopSprites" type="Node2D" parent="."]

[node name="ShapeSprite" type="AnimatedSprite" parent="TopSprites"]
frames = ExtResource( 3 )
animation = "boil"
frame = 1
playing = true

[node name="EffectSprite" type="AnimatedSprite" parent="TopSprites"]
visible = false
frames = ExtResource( 4 )
animation = "boil"
playing = true

[node name="ActionSprite" type="AnimatedSprite" parent="TopSprites"]
frames = ExtResource( 4 )
animation = "boil"
frame = 1
playing = true

[node name="VineLock" type="AnimatedSprite" parent="TopSprites"]
frames = ExtResource( 7 )
animation = "boil"
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="TwoXAnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -60 )
frames = SubResource( 4 )
animation = "boil"
playing = true

[node name="PoofSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 7 )
scale = Vector2( 0.75, 0.75 )
frames = ExtResource( 5 )
animation = "poof"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/effect = SubResource( 15 )
